Added error pages;

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 /node_modules
 /public/hot
 /public/storage
+/public/js/*
+/public/img/*
+/public/svg/*
+public/images/*
+/public/css/*
+/public/theme/*
 /storage/*.key
 /vendor
 .env
