--- a/package.json
+++ b/package.json
@@ -21,10 +21,36 @@
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.5.22"
+        "vue-template-compiler": "^2.5.22",
+        "vue-router": "^2.7.0",
+        "vuex": "^2.4.0"
     },
     "dependencies": {
         "collect.js": "^4.0.28",
-        "sweetalert2": "^7.26.29"
+        "filepond": "^3.3.2",
+        "filepond-plugin-file-validate-size": "^2.0.0",
+        "filepond-plugin-file-validate-type": "^1.2.0",
+        "filepond-plugin-image-crop": "^2.0.0",
+        "filepond-plugin-image-exif-orientation": "^1.0.3",
+        "filepond-plugin-image-preview": "^3.1.4",
+        "filepond-plugin-image-resize": "^2.0.1",
+        "filepond-plugin-image-transform": "^3.0.3",
+        "filepond-plugin-image-validate-size": "^1.1.0",
+        "flatpickr": "^4.5.2",
+        "google-maps-place-crawler": "^2.0.1",
+        "http-build-query": "^0.7.0",
+        "moment": "^2.22.2",
+        "sweetalert2": "^7.26.29",
+        "v-money": "^0.8.1",
+        "v-viewer": "^1.2.1",
+        "vee-validate": "^2.1.0-beta.9",
+        "vue-avatar": "^2.1.7",
+        "vue-bootstrap-typeahead": "^0.2.6",
+        "vue-currency-filter": "^3.2.0",
+        "vue-filepond": "^4.0.1",
+        "vue-loading-overlay": "^3.1.0",
+        "vue-the-mask": "^0.11.1",
+        "vue2-bootstrap-modal": "^0.1.15",
+        "vue2-editor": "^2.6.6"
     }
 }
