--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,13 @@
     "require": {
         "php": "^7.1.3",
         "ext-json": "*",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0",
+        "akaunting/money": "^1.0",
         "arcanedev/log-viewer": "^4.6",
+        "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "6.*",
         "jacobbennett/laravel-http2serverpush": "^2.0",
+        "laravel/framework": "5.7.*",
+        "laravel/tinker": "^1.0",
         "tightenco/ziggy": "^0.6.6",
         "z1lab/laravel-meta-tags": "^3.1",
         "z1lab/openid-client": "1.0.*"
