--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,9 @@ API_VERSION=
 #Payment
 API_PAYMENT=
 
+#Admin
+ADMIN_SITE=
+
 #JS
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
@@ -59,6 +62,7 @@ MIX_API_VERSION_ENDPOINT="${API_ENDPOINT}/api/${API_VERSION}"
 MIX_CLIENT_ID="${CLIENT_ID}"
 MIX_APP_URL="${APP_URL}"
 MIX_API_PAYMENT="${API_PAYMENT}"
+MIX_ADMIN_SITE="${ADMIN_SITE}"
 
 AWS_CDN_ENDPOINT=https://s3.us-east-2.amazonaws.com/cdn-z1lab
 
