--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,7 @@ MIX_API_VERSION_ENDPOINT="${API_ENDPOINT}/api/${API_VERSION}"
 MIX_CLIENT_ID="${CLIENT_ID}"
 MIX_APP_URL="${APP_URL}"
 MIX_API_PAYMENT="${API_PAYMENT}"
+MIX_ADMIN_URL=""
 
 AWS_CDN_ENDPOINT=https://s3.us-east-2.amazonaws.com/cdn-z1lab
 
