centralizing search for cdn in vuejs

--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,12 @@ API_PAYMENT=
 #Admin
 ADMIN_SITE=
 
+#AWS
+AWS_CDN_ENDPOINT=
+
+#Google
+GOOGLE_API_KEY=
+
 #JS
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
@@ -63,7 +69,4 @@ MIX_CLIENT_ID="${CLIENT_ID}"
 MIX_APP_URL="${APP_URL}"
 MIX_API_PAYMENT="${API_PAYMENT}"
 MIX_ADMIN_SITE="${ADMIN_SITE}"
-
-AWS_CDN_ENDPOINT=https://s3.us-east-2.amazonaws.com/cdn-z1lab
-
-GOOGLE_API_KEY=AIzaSyBoOEktR9kk8IYH5Qs4Hw6kk9m1IrfvQPg
+MIX_AWS_CDN_ENDPOINT="${AWS_CDN_ENDPOINT}"
