adding purchase per ticket

--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,4 @@ MIX_APP_URL="${APP_URL}"
 MIX_API_PAYMENT="${API_PAYMENT}"
 MIX_ADMIN_SITE="${ADMIN_SITE}"
 MIX_AWS_CDN_ENDPOINT="${AWS_CDN_ENDPOINT}"
+MIX_ECHO_HOST=""
