--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
         "flatpickr": "^4.5.2",
         "google-maps-place-crawler": "^2.0.1",
         "http-build-query": "^0.7.0",
+        "laravel-echo": "^1.5.3",
         "moment": "^2.22.2",
+        "socket.io-client": "^2.2.0",
         "sweetalert2": "^7.26.29",
         "v-money": "^0.8.1",
         "v-viewer": "^1.2.1",
