Updated cart payment information; Fixed bug in cart amount display; Added loading to installments credit card form input;

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,8 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
+ECHO_HOST=http://127.0.0.2:6001
+
 #Auth
 AUTH_SERVER=
 AUTH_SERVER_VERSION=
@@ -70,4 +72,4 @@ MIX_APP_URL="${APP_URL}"
 MIX_API_PAYMENT="${API_PAYMENT}"
 MIX_ADMIN_SITE="${ADMIN_SITE}"
 MIX_AWS_CDN_ENDPOINT="${AWS_CDN_ENDPOINT}"
-MIX_ECHO_HOST=""
+MIX_ECHO_HOST="${ECHO_HOST}"
