--- a/.env.example
+++ b/.env.example
@@ -58,7 +58,7 @@ ADMIN_SITE=
 AWS_CDN_ENDPOINT=
 
 #Google
-GOOGLE_API_KEY=
+GOOGLE_API_KEY=AIzaSyBoOEktR9kk8IYH5Qs4Hw6kk9m1IrfvQPg
 
 #JS
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
